# python-features-test

./: .gitignore  README.md  pyproject.toml
doc/: ChainMap.md  Python 闭包学习教程.md  collections.defaultdict.md  类方法，实例方法和静态方法.md
src/test_demo/t-2/: 1.py  3.2.py  3.py  4.3.py  5.py
src/test_demo/t-3/: 1.1.py  1.4.py  1.5.py  3.2.py  3.3.py  3.4.py  3.5.py  4.0.py  4.1.py  5.0.py
src/test_demo/t-4/: 1.0.py  2.0.py  2.1.py  3.0.py  4.1.py  4.3.py  4.5.py  6.1.py  7.0.py  7.1.py  8.0.py  8.5.py  8.6.py
src/test_demo/t-5/: 1.py  2.4.py  3.1.py  3.3.py  3.5.py  4.3.py  5.2.py  5.3.py
src/test_demo/t-6/: 1.0.py  2.0.py  4.1 copy.py  4.1.py  7.1.py  7.2.py
src/test_demo/t-7/: 3.0.py  4.0.py  6.0.py
src/test_demo/t-8/: 1.0.py
