[project]
name = "test-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "hookehuyr",email = "hookehuyr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "test_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
